# llm-trader-rag

./: .gitignore  BUILD_FIX.md  COMPILATION_FIXES.md  Cargo.toml  DEPLOYMENT_GUIDE.md  EXPLORATION_COMPLETE.txt  EXPLORATION_INDEX.md  PHASE1_STATUS.md  PROJECT_STATUS.md  PR_DESCRIPTION_PHASE3.md  PR_PHASE2_DESCRIPTION.md  RAG_JSONRPC_QUICK_REFERENCE.md  README.md  TEST_RESULTS.md  WHATS_NEXT.md  WORKFLOW_MANAGER_EXPLORATION_SUMMARY.md  WORKFLOW_MANAGER_RPC_GUIDE.md
.cargo/: config.toml
config/: llm_rag_config.toml  rpc_server.example.toml
docs/: BUILD_NOTES.md  INTEGRATION_SUMMARY.md  PHASE3_LLM_CLIENT.md  PHASE4_JSON_RPC_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION.md  PHASE_4_TEST_COVERAGE.md  PHASE_5_CONFIGURATION_MONITORING.md  PHASE_6_COMPLETE.md  PHASE_6_LMDB_INTEGRATION.md
docs/architecture/: API_QUICK_START.md  README.md  architecture.md  jsonrpc_api.md
rag-ingest/: Cargo.toml
rag-ingest/src/: main.rs
rag-rpc-server/: Cargo.toml  README.md  test_request.sh
rag-rpc-server/src/: config.rs  error.rs  handler.rs  main.rs  protocol.rs  server.rs
rag-rpc-server/tests/: integration_test.rs
spec/: LLM_BOT_RAG_IMPLEMENTATION.md
trading-core/: Cargo.toml
trading-core/src/: lib.rs  types.rs
trading-core/src/types/: market_snapshot.rs
trading-data-services/: Cargo.toml
trading-data-services/src/: lib.rs
trading-data-services/src/rag/: ingestion_pipeline.rs  lmdb_reader.rs  mod.rs  snapshot_extractor.rs  snapshot_formatter.rs  vector_store.rs
trading-data-services/tests/: indicator_validation_test.rs  lmdb_edge_cases_test.rs
trading-strategy/: Cargo.toml
trading-strategy/examples/: phase4_strategy_usage.rs
trading-strategy/src/: lib.rs
trading-strategy/src/llm/: llm_client.rs  metrics.rs  mod.rs  prompt_formatter.rs  rag_retriever.rs
trading-strategy/src/strategy/: llm_rag_v1.rs  mod.rs
trading-strategy/tests/: phase2_integration_test.rs  phase3_integration_test.rs  phase4_integration_test.rs
