[package]
name = "rag-rpc-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "rag-rpc-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

# Internal crates
trading-core = { path = "../trading-core" }
trading-data-services = { path = "../trading-data-services" }
trading-strategy = { path = "../trading-strategy" }

# Additional dependencies
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
