[package]
name = "trading-strategy"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
trading-core = { path = "../trading-core" }
trading-data-services = { path = "../trading-data-services" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# RAG infrastructure
fastembed = { workspace = true }
qdrant-client = { workspace = true }
moka = { workspace = true }

# LLM clients
async-openai = { workspace = true }
governor = { workspace = true }
